--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/menu"
+            android:textSize="29sp"
+            android:textColor="@color/purple_500"
+            android:textStyle="italic"
+            android:layout_marginStart="75dp"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,7 +82,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/img_2" />
+                    android:src="@drawable/img_3" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -86,7 +95,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/img_2" />
+                    android:src="@drawable/img_4" />
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
@@ -106,7 +115,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/img_2" />
+                    android:src="@drawable/img_5" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -119,7 +128,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/img_2" />
+                    android:src="@drawable/img_6" />
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
@@ -139,7 +148,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/img_2" />
+                    android:src="@drawable/img_7" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
