--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,10 +159,11 @@
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/backg"
         android:orientation="vertical"
-        android:padding="20dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -173,13 +174,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:onClick="loc">
+            android:minHeight="48dp"
+            android:onClick="loc"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/location"
                 android:layout_width="42dp"
-
+                android:layout_marginTop="24dp"
                 android:layout_height="19dp"
                 android:layout_weight="1"
                 android:src="@drawable/img" />
@@ -188,10 +190,11 @@
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:layout_weight="2"
-                android:textStyle="bold"
                 android:text="@string/address"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -213,13 +216,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:onClick="site">
+            android:minHeight="48dp"
+            android:onClick="site"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/webImg"
-                android:layout_width="42dp"
-                android:layout_height="19dp"
+                android:layout_width="41dp"
+                android:layout_height="24dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/img_1" />
 
@@ -230,7 +234,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/webs"
                 android:textColor="@color/purple_700"
-                android:textStyle="italic"/>
+                android:textStyle="italic" />
 
         </LinearLayout>
 
