--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,9 @@
         android:layout_height="wrap_content"
         android:text="@string/pr_caterents"
         android:textColor="@color/teal_700"
-        android:textSize="50sp"
+        android:textSize="34sp"
+        android:layout_marginStart="25dp"
+        android:padding="5dp"
         android:textStyle="italic"
         style="@style/TextAppearance.Material3.BodyMedium"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -53,7 +55,7 @@
             android:textSize="29sp"
             android:textColor="@color/purple_500"
             android:textStyle="italic"
-            android:layout_marginStart="75dp"/>
+            android:layout_marginStart="65dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
